[gd_scene load_steps=3 format=3 uid="uid://kya7jk1w4kfv"]

[ext_resource type="Script" path="res://addons/gddialog/ui/ui_database_editor/managers/ui_vbc_string_manager/ui_string_row/signals/signals-ui-string-row.gd" id="1_7tu2k"]
[ext_resource type="Script" path="res://addons/gddialog/ui/ui_database_editor/managers/ui_vbc_string_manager/ui_string_row/ui-string-row.gd" id="1_kgbek"]


[node name="StringRow" type="ColorRect"]
custom_minimum_size = Vector2(0, 31)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.156863)
script = ExtResource("1_kgbek")

[node name="Signals" type="Node" parent="."]
script = ExtResource("1_7tu2k")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LineEditStringName" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.76
placeholder_text = "string name"

[node name="LineEditDefaultValue" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "default value"

[node name="ButtonDeleteString" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = " üóëÔ∏è "

[connection signal="focus_entered" from="HBoxContainer/LineEditStringName" to="Signals" method="_on_line_edit_string_name_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/LineEditStringName" to="Signals" method="_on_line_edit_string_name_focus_exited"]
[connection signal="text_submitted" from="HBoxContainer/LineEditStringName" to="Signals" method="_on_line_edit_string_name_text_submitted"]
[connection signal="focus_entered" from="HBoxContainer/LineEditDefaultValue" to="Signals" method="_on_line_edit_default_value_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/LineEditDefaultValue" to="Signals" method="_on_line_edit_default_value_focus_exited"]
[connection signal="text_submitted" from="HBoxContainer/LineEditDefaultValue" to="Signals" method="_on_line_edit_default_value_text_submitted"]
[connection signal="pressed" from="HBoxContainer/ButtonDeleteString" to="Signals" method="_on_button_delete_string_pressed"]
